# taos-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README-CN.md  README.md  VERSION  compile_flags.txt  insert_res.txt  taosbenchmark-user-manual-CN.md  taosbenchmark-user-manual.md  taosdump-user-manual-CN.md  taosdump-user-manual.md
.github/workflows/: 2.x-aarch64.yml  2.x-archlinux-release.yml  2.x-armv7.yml  2.x-centos-release.yml  2.x-macos-debug.yml  2.x-macos-release.yml  2.x-non-x64.yml  2.x-taosbenchmark-debug.yml  2.x-taosbenchmark-release.yml  2.x-taosdump-debug.yml  2.x-taosdump-release.yml  2.x-windows-build.yml  3.0-alpine.yml  3.0-archlinux-release.yml  3.0-coveralls.yml  3.0-macos-debug.yml  3.0-macos-release.yml  3.0-non-x64.yml  3.0-taosBenchmark-debug.yml  3.0-taosBenchmark-release.yml  3.0-taosbenchmark-debug.yml  3.0-taosbenchmark-release.yml  3.0-taosdump-debug.yml  3.0-taosdump-release-ws.yml  3.0-taosdump-release.yml  3.0-windows-build.yml  arm32.yml  centos-release.yml  ci-taosBenchmark-debug.yml  ci-taosBenchmark-release-ws.yml  ci-taosBenchmark-release.yml  ci-taosbenchmark-release-ws.yml  ci-taosdump-debug.yml  ci-taosdump-release-ws.yml  ci-taosdump-release.yml  cmake-release-ws.yml  cmake-release.yml  cmake.yml  codecov.yml  codeql.yml  (+9 more)
case/: disorder.json  exportCsv.json  insertCompress.json  insertMix.json  insertPrimaryKey.json  insertQuery.json  insertStmt2.json  insertSuit1.json  insertSuit2.json  insertSuit3.json  keep.json  lost.json  order.json  real.json  stt.json
example/: async-sub.json  dmeters.json  filldemeters.json  insert-from-to.json  insert-rest.json  insert-with-partial-columns.json  insert-with-specified-columns.json  insert.json  insertFuns.json  insertMix.json  insertNow.json  insertPosition.json  insertQuery.json  insert_csv.json  insert_math.json  query-with-file.json  query.json  sample.csv  subscribe.json  tmq.json
inc/: bench.h  benchCsv.h  benchData.h  benchDataMix.h  benchInsertMix.h  benchLog.h  demo.h  demoData.h  dump.h  dumpUtil.h  toolsdef.h  wrapDb.h  wsdump.h
inc/taosdump/: quickBase.h  quickIn.h  quickOut.h
packaging/deb/: make-taos-tools-deb.sh
packaging/deb/DEBIAN/: control  postinst  prerm
packaging/rpm/: make-taos-tools-rpm.sh  taos-tools.spec
packaging/tools/: get_os.sh  install-taostools.sh  install-tools.sh  make_install.sh  uninstall-taostools.sh  uninstall-tools.sh
src/: CMakeLists.txt  benchCommandOpt.c  benchCsv.c  benchData.c  benchDataGeometry.c  benchDataMix.c  benchInsert.c  benchInsertMix.c  benchInsertTaosc.c  benchJsonOpt.c  benchLog.c  benchMain.c  benchOutput.c  benchParse.c  benchQuery.c  benchSml.c  benchStmt.c  benchSubscribe.c  benchSys.c  benchTaosc.c  benchTmq.c  benchUtil.c  benchUtilDs.c  benchWindows.c  demoCommandOpt.c  demoData.c  demoInsert.c  demoJsonOpt.c  demoMain.c  demoOutput.c  demoQuery.c  demoSubscribe.c  demoUtil.c  dumpUtil.c  taosdump.c  taosdump_win.c  toolsDir.c  toolsString.c  toolsSys.c  toolstime.c  (+2 more)
src/taosdump/: quickOut.c
suit/: insertSuit1.json  insertSuit2.json  insertSuit3.json  insertSuit4.json
test/: CMakeLists.txt  benchTest.c  taosdemoTest.c  taosdump-test.sql
tests/: manycols.sql  test.py
tests/cases/: insertReliability.py
tests/pytest/util/: buildClusterEnv.sh  cases.py  common.py  dnodes-default.py  dnodes-no-random-fail.py  dnodes-random-fail.py  dnodes.py  dockerNodes.py  pathFinding.py  sub.py  taosdemoCfg.py  types.py
tests/taosbenchmark/: auto_create_table_json.py  bugs.py  cloud-test.py  commandline-partial-col-numpy.py  commandline-retry.py  commandline-single-table.py  commandline-sml.py  commandline-supplement-insert.py  commandline-vgroups.py  commandline.py  custom_col_tag.py  default_json.py  default_tmq_json.py  demo.py  exportCsv.py  from-to-continue.py  from-to.py  insert-json-csv.py  insertReliability.py  insert_alltypes_json.py  invalid_commandline.py  json_tag.py  limit_offset_json.py  queryMain.py  query_json-kill-slow-query.py  query_json-with-error-sqlfile.py  query_json-with-sqlfile.py  query_json.py  rest_auto_create_table_json.py  rest_insert_alltypes_json.py  reuse-exist-stb.py  sample_csv_json.py  sml_insert_alltypes_json.py  sml_interlace.py  sml_json_alltypes-interlace.py  sml_json_alltypes.py  sml_json_insert_alltypes-same-min-max.py  sml_taosjson_alltypes.py  sml_taosjson_insert_alltypes-same-min-max.py  sml_telnet_alltypes.py  (+25 more)
tests/taosbenchmark/csv/: d0.csv  sample_use_ts.csv
tests/taosbenchmark/json/: TD-31575.json  TD-32913-1.json  TD-32913.json  TS-5002.json  TS-5234-1.json  TS-5234-2.json  TS-5234-3.json  TS-5243-1.json  TS-5243-2.json  case-insert-mix.json  case-insert-mix1.json  case-insert-mix2.json  case-insert-mix3.json  case-insert-mix4.json  exportCsv.json  insert-sample-ts-stmt.json  insert-sample-ts.json  queryMode3Rest.json  queryModeSuper.json  rest_insert_alltypes.json  sml_json_insert_alltypes-same-min-max.json  sml_rest_telnet.json  sml_taosjson_alltypes.json  sml_telnet_insert_alltypes-same-min-max.json  stmt2_insert_csv_batch_autoctb_no.json  stmt2_insert_csv_interlace_autoctb_yes.json  stmt_auto_create_table.json  stmt_insert_alltypes-same-min-max.json  stmt_sample_doesnt_use_ts.json  stmt_sample_use_ts-subtable.json  stmt_sample_use_ts.json  stream-test.json  stream_exist_stb_tag_insert_partition.json  stream_exist_stb_tag_prepare.json  taosc_auto_create_table.json  taosc_insert_alltypes-partial-col.json  taosc_insert_alltypes.json  taosc_insert_table-creating-interval.json  taosc_query-kill-slow-query.json  taosc_sample_use_ts-subtable.json  (+3 more)
tests/taosbenchmark/v2/: subscripe_json.py  taosdemoTestInsertWithJson-otherPara.py  taosdemoTestSupportNanoInsert.py  taosdemoTestSupportNanosubscribe.py
tests/taosbenchmark/v3/: cloud-test.py  commandline-vgroups.py  default_tmq_json.py  query_json-kill-slow-query.py  taosdemoTestQueryWithJson-mixed-query.py  tmq_case.py
tests/taosbenchmark/ws/: websocket.py  websocket.py.sql
tests/taosdump/: taosdump-test-chinese-short.sql  taosdump-test-chinese.sql
tests/taosdump/native/: taosdumpDbNtb.py  (+23 more)
(+37 files in other folders)
