CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(taos-tool
    LANGUAGES C
    VERSION 0.1.0
)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build/bin)

ADD_SUBDIRECTORY(deps)
ADD_SUBDIRECTORY(src)

INSTALL(FILES ${CMAKE_BINARY_DIR}/build/bin/taosdump
  DESTINATION bin
)

INSTALL(DIRECTORY ${PROJECT_BINARY_DIR}/build/lib DESTINATION /usr/local)
INSTALL(CODE "execute_process(COMMAND ldconfig)")
